# differential-photometry

./: .gitignore  LICENSE  README.md  Roadmap.md  TODO.md  pyproject.toml
shutterbug/: cli.py  csv_loader.py  differential.py  graph.py  utility.py
shutterbug/app/: main.py
shutterbug/core/: app_controller.py  progress_bar_handler.py
shutterbug/core/LUTs/: __init__.py  asinh.py  base_stretch.py  linear.py  log.py  registry.py  sqrt.py
shutterbug/core/events/: __init__.py  change_event.py
shutterbug/core/managers/: __init__.py  base_manager.py  error_manager.py  file_manager.py  graph_manager.py  image_manager.py  measurement_manager.py  selection_manager.py  star_catalog.py  stretch_manager.py
shutterbug/core/models/: __init__.py  base_observable.py  error_model.py  fits_model.py  graph_model.py  image_data.py  marker_model.py  measurement_model.py  outliner_model.py  progress_model.py  star_identity.py  star_measurement.py
shutterbug/core/utility/: photometry.py
shutterbug/gui/: aperture_photometry.py  app.py  base_ui_widget.py  image_data.py  image_manager.py  main_window.py  multiviewer.py  outliner.py  panel.py  progress_bar_handler.py  project.py  properties.py  region.py  sidebar.py  star.py  tool_settings.py  viewer.py
shutterbug/gui/adapters/: FITS_model_adapter.py  __init__.py  adapter_registry.py  star_identity_adapter.py  star_measurement_adapter.py  tabular_data_interface.py
shutterbug/gui/commands/: __init__.py  base_command.py  file_commands.py  graph_commands.py  image_commands.py  main_commands.py  remove_commands.py  select_commands.py  settings_commands.py  star_commands.py
shutterbug/gui/controls/: __init__.py  labeled_combo_box.py  labeled_slider.py  labeled_text_box.py  labeled_widget.py  popover_panel.py  scrubby_slider.py
shutterbug/gui/managers/: __init__.py  icon_manager.py  marker_manager.py  progress_manager.py  (+2 more)
src/shutterbug/: application.py
(+41 files in other folders)
