[tool.poetry]
name = "shutterbug"
version = "0.1.0"
description = "Conducts differential photometry on arbitrary datasets"
authors = [
    "Ada Voden <ada@voden.ca>"
]
requires-python = ">=3.13,<4.0"
packages = [{ include = "shutterbug" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AdaVoden/differential-photometry"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
