[project]
name = "shutterbug"
version = "0.1.0"
description = "Differential photometry and variable star detection tool"
authors = [
    {name = "Ada Voden",email = "ada@voden.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "click (>=8.3.0,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
