[project]
name = "shutterbug"
version = "0.1.0"
description = "Differential photometry and variable star detection tool"
authors = [
    {name = "Ada Voden", email = "ada@voden.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "astropy (>=7.1.1,<8.0.0)",
    "pyside6 (>=6.10.0,<7.0.0)",
    "photutils (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "qt-material (>=2.17,<3.0)",
    "scipy (>=1.16.3,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
shutterbug = "shutterbug.cli:cli"
shutterbug-gui = "shutterbug.app.main:main"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]

[virtualenvs]
in-project = true
